Fix nav bar to align with content title

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -40,6 +40,7 @@ a[href]
   position: relative
   transition: all 400ms ease 0s
   right: 0
+  margin-top: 50px
 
 .content
   margin: 11% auto 0
@@ -71,7 +72,7 @@ a[href]
     transform: scale(1.1)
   &:active
     transform: scale(0.9)
-  transition: all 200ms ease    
+  transition: all 200ms ease
 
 #site-nav
   ul
